client/src/ui/molecules/language-toggle/index.scss
@import "~@mdn/minimalist/sass/mixins/utils";
@import "~@mdn/minimalist/sass/vars/color-palette";
@import "~@mdn/minimalist/sass/vars/layout";

ul.language-toggle {
  display: flex;
  text-align: right;

  @media #{$mq-tablet-and-up} {
    justify-content: flex-end;
    position: relative;
    text-align: inherit;
    top: -2px;
  }

  .icon {
    margin: 0;
  }

  &.icon-only {
    justify-content: flex-end;
  }

  li {
    max-height: 24px;
  }

  .language-icon {
    display: block;
    width: auto;

    // always set min-width for the English link
    &.default {
      min-width: 100px;
    }

    // set the same min-width as above for both the English
    // and change language link on tablet and larger
    @media #{$mq-tablet-and-up} {
      min-width: 100px;
    }

    &::before {
      background: transparent url("~@mdn/dinocons/general/language.svg") 0 0
        no-repeat;
      content: "";
      display: inline-block;
      height: 29px;
      vertical-align: middle;
      width: 28px;

      @media #{$mq-tablet-and-up} {
        margin-right: $base-unit;
      }
    }
  }
}

.show-desktop {
  @include visually-hidden();

  @media #{$mq-tablet-and-up} {
    @include reset-visually-hidden();
    margin: 0;
  }
}

